--- a/dev/stylus/helpers/sprite-png.styl
+++ b/dev/stylus/helpers/sprite-png.styl
@@ -16,8 +16,8 @@ $keep_width = 1px;
 $keep_height = 1px;
 $keep_total_width = 1px;
 $keep_total_height = 1px;
-$keep_image = 'sprite.png';
-$keep = 0px 0px 0px 0px 1px 1px 1px 1px 'sprite.png';
+$keep_image = '../images/sprite.png';
+$keep = 0px 0px 0px 0px 1px 1px 1px 1px '../images/sprite.png';
 
 /*
 The provided mixins are intended to be used with the array-like variables
