--- a/dev/stylus/helpers/sprite-svg.styl
+++ b/dev/stylus/helpers/sprite-svg.styl
@@ -20,14 +20,18 @@
 }
 
 
-.icon-gp:before {
+.icon-fb:before {
 	content: "\E001";
 }
 
-.icon-tw:before {
+.icon-gp:before {
 	content: "\E002";
 }
 
-.icon-vk:before {
+.icon-tw:before {
 	content: "\E003";
+}
+
+.icon-vk:before {
+	content: "\E004";
 }
