--- a/dev/stylus/main.styl
+++ b/dev/stylus/main.styl
@@ -4,7 +4,7 @@
 @import 'helpers/mixins'
 
 @import 'base/fonts'
-@import 'base/normalize'
+@import 'base/reset'
 @import 'base/common'
 
 @import 'partials/**/*'
