Browserify and fixes

--- a/dev/jade/pages/index.jade
+++ b/dev/jade/pages/index.jade
@@ -1,9 +1,9 @@
 extends ../layouts/default
 
 block head
-	- pageTitle = 'Frontend Project Template';
-	- pageDescription = 'A template for a quick start of the project';
-	- pageKeywords = 'project, template, frontend, gulp, jade, stylus, coffeescript, spritesmith, iconfont';
+	- pageTitle = 'Template';
+	- pageDescription = '';
+	- pageKeywords = '';
 
 block scripts
 	+script(['js/main.js'])
