--- a/dev/stylus/base/reset.styl
+++ b/dev/stylus/base/reset.styl
@@ -88,6 +88,8 @@ body
 
 // Remove the gray background color from active links in IE 10.
 a
+	color inherit
+	text-decoration none
 	background transparent
 
 // Improve readability when focused and also mouse hovered in all browsers.
