--- a/dev/stylus/main.styl
+++ b/dev/stylus/main.styl
@@ -1,5 +1,5 @@
 @import 'helpers/sprite-png'
-@import 'helpers/sprite-svg'
+@import 'helpers/iconfont'
 @import 'helpers/variables'
 @import 'helpers/mixins'
 
