--- a/dev/stylus/helpers/mixins.styl
+++ b/dev/stylus/helpers/mixins.styl
@@ -36,3 +36,11 @@ clearfix()
 // Fix no working `-webkit-text-size-adjust: 100%;` in Android.
 fix-text-size-adjust()
 	background-image linear-gradient(transparent, transparent)
+
+// Inner constructor
+inner($maxWidth, $minWidth, $padding)
+	margin 0 auto
+	max-width $maxWidth + $padding * 2
+	min-width $minWidth
+	padding-right $padding
+	padding-left $padding
