--- a/dev/stylus/helpers/iconfont.styl
+++ b/dev/stylus/helpers/iconfont.styl
@@ -1,10 +1,10 @@
 @font-face
 	font-family 'iconfont'
-	src url('../fonts/sprite/iconfont.eot');
-	src url('../fonts/sprite/iconfont.eot?#iefix') format('eot'),
-		url('../fonts/sprite/iconfont.woff') format('woff'),
-		url('../fonts/sprite/iconfont.ttf') format('truetype'),
-		url('../fonts/sprite/iconfont.svg#iconfont') format('svg')
+	src url('../fonts/iconfont/iconfont.eot');
+	src url('../fonts/iconfont/iconfont.eot?#iefix') format('eot'),
+		url('../fonts/iconfont/iconfont.woff') format('woff'),
+		url('../fonts/iconfont/iconfont.ttf') format('truetype'),
+		url('../fonts/iconfont/iconfont.svg#iconfont') format('svg')
 
 .iconfont
 	font-family 'iconfont'
@@ -45,4 +45,5 @@ iconfont($icon, $insert = before)
 	
 .iconfont-vk
 	iconfont($iconfont-vk)
-	
+	
+
