--- a/dev/stylus/main.styl
+++ b/dev/stylus/main.styl
@@ -1,4 +1,4 @@
-@import 'helpers/sprite-png'
+@import 'helpers/sprite'
 @import 'helpers/iconfont'
 @import 'helpers/variables'
 @import 'helpers/mixins'
@@ -6,8 +6,6 @@
 @import 'base/fonts'
 @import 'base/reset'
 @import 'base/common'
-
-@import 'partials/**/*'
 
 @import 'blocks/**/*'
 
