--- a/dev/jade/blocks/main.jade
+++ b/dev/jade/blocks/main.jade
@@ -2,3 +2,9 @@
 	|Content
 	.iconfont.iconfont-vk
 		
+	+b.block1
+		+e.element1 Foo
+		+b.block2
+			+e('a')(href="#bar").element Bar
+		+e.element2 Baz
+		
