--- a/dev/stylus/helpers/sprite.styl
+++ b/dev/stylus/helpers/sprite.styl
@@ -7,7 +7,11 @@ Stylus variables are information about icon's compiled state, stored under its o
 
 The large array-like variables contain all information about a single icon
 $icon_home = x y offset_x offset_y width height total_width total_height image_path;
+
+At the bottom of this section, we provide information about the spritesheet itself
+$spritesheet = width height image $spritesheet_sprites;
 */
+$keep_name = 'keep';
 $keep_x = 0px;
 $keep_y = 0px;
 $keep_offset_x = 0px;
@@ -17,7 +21,12 @@ $keep_height = 1px;
 $keep_total_width = 1px;
 $keep_total_height = 1px;
 $keep_image = '../images/sprite.png';
-$keep = 0px 0px 0px 0px 1px 1px 1px 1px '../images/sprite.png';
+$keep = 0px 0px 0px 0px 1px 1px 1px 1px '../images/sprite.png' 'keep';
+$spritesheet_width = 1px;
+$spritesheet_height = 1px;
+$spritesheet_image = '../images/sprite.png';
+$spritesheet_sprites = $keep;
+$spritesheet = 1px 1px '../images/sprite.png' $spritesheet_sprites;
 
 /*
 The provided mixins are intended to be used with the array-like variables
@@ -51,4 +60,19 @@ sprite($sprite) {
   spritePosition($sprite)
   spriteWidth($sprite)
   spriteHeight($sprite)
+}
+
+/*
+The `sprites` mixin generates identical output to the CSS template
+  but can be overridden inside of Stylus
+
+sprites($spritesheet_sprites);
+*/
+sprites($sprites) {
+  for $sprite in $sprites {
+    $sprite_name = $sprite[9];
+    .{$sprite_name} {
+      sprite($sprite);
+    }
+  }
 }
