gulp-concat added

--- a/dev/jade/partials/head.jade
+++ b/dev/jade/partials/head.jade
@@ -8,5 +8,6 @@ head
 	title#title= pageTitle
 	meta(name='description' content=pageDescription)
 	meta(name='keywords' content=pageKeywords)
+	meta(name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE")
 
 	link(href='css/main.css' rel='stylesheet')
