browserify, bower, some other improvements

--- a/dev/stylus/base/common.styl
+++ b/dev/stylus/base/common.styl
@@ -6,7 +6,8 @@ body
   font-family Arial
   color #333
   line-height 1.5
-  background #ddd
+  font-size 18px
+  background #f3f3f3
 
 .clearfix
   clearfix()
