--- a/dev/stylus/base/reset.styl
+++ b/dev/stylus/base/reset.styl
@@ -226,8 +226,8 @@ textarea
   user-select text
 
 // Hide placeholder on focus.
-[placeholder]:focus::placeholder
-  color transparent
+// [placeholder]:focus::placeholder
+//   color transparent
 
 // Tables
 // ==========================================================================
