--- a/dev/stylus/blocks/content.styl
+++ b/dev/stylus/blocks/content.styl
@@ -1,4 +1,6 @@
 .content
+  padding 20px
   background-color #fff
   inner($mainMaxWidth, $mainMinWidth, $mainPadding)
-    
+  text-align center
+  
