--- a/dev/stylus/blocks/footer.styl
+++ b/dev/stylus/blocks/footer.styl
@@ -1,8 +1,10 @@
 .footer
   height $footerHeight
-  background-color #eee
+  background-color #f9f9f9
+  text-align center
   
   &__inner
+    padding 20px
     background-color #fff
     inner($mainMaxWidth, $mainMinWidth, $mainPadding)
   
