--- a/dev/stylus/main.styl
+++ b/dev/stylus/main.styl
@@ -1,5 +1,6 @@
-@import 'helpers/sprite'
-@import 'helpers/iconfont'
+@import '../../temp/stylus/sprite'
+@import '../../temp/stylus/iconfont'
+
 @import 'helpers/variables'
 @import 'helpers/mixins'
 
