--- a/dev/jade/blocks/main.jade
+++ b/dev/jade/blocks/main.jade
@@ -1,10 +1,10 @@
 .content
   |Content
-  .iconfont.iconfont-vk
-    
-  +b.block1
-    +e.element1 Foo
-    +b.block2
-      +e('a')(href="#bar").element Bar
-    +e.element2 Baz
-    
+  .vk
+  
+  .sprite  
+
+  .block1
+    .block1__element1 Foo
+  .block2
+    a(href="#bar").block2__element Bar
