--- a/dev/stylus/blocks/header.styl
+++ b/dev/stylus/blocks/header.styl
@@ -1,8 +1,10 @@
 .header
   margin-bottom 5px
-  background-color #eee
+  background-color #f9f9f9
+  text-align center
   
   &__inner
+    padding 20px
     background-color #fff
     inner($mainMaxWidth, $mainMinWidth, $mainPadding)
     
