--- a/dev/jade/blocks/main.jade
+++ b/dev/jade/blocks/main.jade
@@ -1,10 +1,13 @@
 .content
-  |Content
-  .vk
-  
-  .sprite  
 
-  .block1
-    .block1__element1 Foo
-  .block2
-    a(href="#bar").block2__element Bar
+  .content__ttl Iconfont Example
+  .tw
+  
+  .content__ttl Sprite Example
+  .sprite
+  
+  .content__ttl Grid Example
+  .grid
+    .grid__col 1
+    .grid__col 2
+    .grid__col 3
