--- a/dev/stylus/blocks/content.styl
+++ b/dev/stylus/blocks/content.styl
@@ -4,3 +4,11 @@
   inner($mainMaxWidth, $mainMinWidth, $mainPadding)
   text-align center
   
+  &__ttl
+    font-size 21px
+    margin 20px 0
+    border-bottom 1px solid #f3f3f3
+    display inline-block
+
+    @media(max-width: 600px)
+      font-size 18px
