--- a/dev/stylus/main.styl
+++ b/dev/stylus/main.styl
@@ -1,8 +1,10 @@
+@import 'jeet'
+
 @import '../../temp/stylus/sprite'
 @import '../../temp/stylus/iconfont'
 
 @import 'helpers/variables'
-@import 'helpers/mixins'
+@import 'helpers/mixins/**/*'
 
 @import 'base/fonts'
 @import 'base/reset'
@@ -10,5 +12,5 @@
 
 @import 'blocks/**/*'
 
-.hidden
+.i-hidden
   display none
