--- a/dev/jade/partials/head.jade
+++ b/dev/jade/partials/head.jade
@@ -5,7 +5,7 @@ head
   meta(name='cleartype' content='on')
 
   block head
-  title#title= pageTitle
+  title= pageTitle
   meta(name='description' content=pageDescription)
   meta(name='keywords' content=pageKeywords)
   meta(name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE")
