--- a/dev/stylus/base/reset.styl
+++ b/dev/stylus/base/reset.styl
@@ -17,7 +17,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video
   margin 0
   padding 0
-  font-size inherit
+  font-size 100%
   font-family inherit
   box-sizing border-box
 
