sprite stylus template fix

--- a/gulp/templates/sprite.template.handlebars
+++ b/gulp/templates/sprite.template.handlebars
@@ -21,8 +21,8 @@ $sprites = {}
 // {{name}}
 $sprites['{{name}}'] = {}
 $sprites['{{name}}']['name'] = '{{name}}'
-$sprites['{{name}}']['x'] = {{px.x}}
-$sprites['{{name}}']['y'] = {{px.y}}
+$sprites['{{name}}']['x'] = - {{px.x}}
+$sprites['{{name}}']['y'] = - {{px.y}}
 $sprites['{{name}}']['offset_x'] = {{px.offset_x}}
 $sprites['{{name}}']['offset_y'] = {{px.offset_y}}
 $sprites['{{name}}']['width'] = {{px.width}}
