Fix retina sprite position

--- a/gulp/templates/sprite.template.handlebars
+++ b/gulp/templates/sprite.template.handlebars
@@ -70,7 +70,7 @@ sprite2Image($sprite)
 	background-repeat: no-repeat
 
 sprite2Position($sprite)
-	background-position: _d($sprites[$sprite]['x'] $sprites[$sprite]['y'])
+	background-position: _d($sprites[$sprite]['x']) _d($sprites[$sprite]['y'])
 
 sprite2Width($sprite)
 	width: _d($sprites[$sprite]['width'])
